ecmascript/parser/tests/typescript-errors/tsc/async/es6/asyncSetter_es6/input.ts.stderr
error[1042]: `async` modifier cannot be used here.
 --> $DIR/tests/typescript-errors/tsc/async/es6/asyncSetter_es6/input.ts:4:3
  |
4 |   async set foo(value) {
  |   ^^^^^

